# house_price_predicion

./: .dockerignore  .gitignore  Dockerfile.airflow  Dockerfile.fastapi  Dockerfile.mlflow  Makefile  README.md  create_model.py  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
airflow_tasks/: __init__.py  batch_scoring.py  config.py  monitoring_checks.py  training.py
app/: __init__.py  main.py
app/api/: router.py  routes_health.py  routes_predict.py
app/core/: config.py  logging.py
app/dependencies/: containers.py
app/schemas/: health.py  prediction.py
app/services/: __init__.py  feature_service.py  model_registry.py  prediction.py
config/: model_config.yaml  settings.yaml
dags/: batch_scoring_pipeline.py  monitoring_pipeline.py  training_pipeline.py
data/processed/: batch_predictions.csv
data_engineer/: __init__.py  constants.py  feature_engineering.py  ingestion.py  preprocessing.py  validation.py
docs/: architecture.md
eda/: location_feature_impact.ipynb
eda/presentation_assets/: location_feature_impact_metrics.csv
model_trainer/: __init__.py  __main__.py  config.py  evaluate.py  infer_signature.py  pipelines.py  register.py  reporting.py  split.py  train.py
monitor/: __init__.py  data_drift.py  model_performance.py  prediction_drift.py
monitor/reports/: monitoring_latest.json
reports/monitoring/: monitoring_summary.md
scripts/: ci_local.sh  run_local_training.py  seed_artifacts.py  smoke_test_api.py
tests/: conftest.py  test_airflow_dags.py  test_monitoring.py
tests/api/: test_health.py  test_predict.py
(+6 files in other folders)
